# fedcal

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
fedcal/: __init__.py  benchmark.py  data.py  model.py  train.py
tests/: test_fedcal.py
