[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedcal"
version = "0.1.0"
description = "A non-IID federated logistic regression benchmark with client calibration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["federated-learning", "non-iid", "personalization", "privacy", "benchmark"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/fedcal"

[tool.hatch.build.targets.wheel]
packages = ["fedcal"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]
